<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coop_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gutter">

    <com.poultrypathsprint.arcade.core.ui.ClayPanelView
        android:id="@+id/coop_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:appPanelTitle="@string/dialog_outfit_title">

        <LinearLayout
            android:id="@+id/coop_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/clay_inset"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/gap_s"
            android:paddingTop="@dimen/gap_xs"
            android:paddingEnd="@dimen/gap_m"
            android:paddingBottom="@dimen/gap_xs">

            <ImageView
                android:id="@+id/coop_balance_icon"
                android:layout_width="@dimen/sprite_feather_small"
                android:layout_height="@dimen/sprite_feather_small"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite_feather" />

            <TextView
                android:id="@+id/coop_balance_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_xs"
                android:contentDescription="@string/cd_feather_badge"
                android:textAppearance="@style/TextAppearance.App.Numeric"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coop_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/coop_list_height"
            android:layout_marginTop="@dimen/gap_s"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/coop_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_m"
            android:gravity="center"
            android:text="@string/dialog_outfit_empty"
            android:textAppearance="@style/TextAppearance.App.Label"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/coop_close"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_secondary_h"
            android:layout_marginTop="@dimen/gap_m"
            android:text="@string/btn_close" />

    </com.poultrypathsprint.arcade.core.ui.ClayPanelView>

</RelativeLayout>
